menambah fitur daftar

--- a/Public/index.html
+++ b/Public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
 
     <!-- Feature Icon -->
     <script src="https://unpkg.com/feather-icons"></script>
@@ -29,7 +29,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="Create">Create a Site</a>
+                    <a href="HTML/Registrasi.html" class="Create">Create a Site</a>
                 </li>
             </ul>
         </nav>
@@ -40,9 +40,9 @@
         <aside>
             <h2>Form login</h2>
             <form action="HTML/login.php" method="post">
-                <input type="login" placeholder="Username" id="username" name="login">
-                <input type="password" placeholder="Password" id="password" name="password">
-                <input type="checkbox" id="ceklis" onclick="showFunction()">
+                <input type="login" placeholder="Username" id="username" name="login" required>
+                <input type="password" placeholder="Password" id="password" name="password" required>
+                <input type="checkbox" id="ceklis" onclick="showFunction()" required>
                 <label for="ceklis" style="color: black;">Tampilkan Sandi</label>
                 <input type="submit" value="Login">
               </form>
