membuat class Database dengan PDO

--- a/Public/index.html
+++ b/Public/index.html
@@ -39,8 +39,8 @@
         <h2>"Kehidupan adalah perjalanan, bukan tujuan akhir. Nikmatilah setiap langkah, pelajari setiap pengalaman, dan temukan makna yang lebih dalam dalam setiap detik yang kita jalani."</h2>
         <aside>
             <h2>Form login</h2>
-            <form action="HTML/login.php" method="post">
-                <input type="login" placeholder="Username" id="username" name="login" required>
+            <form action="PHP/login.php" method="post">
+                <input type="login" placeholder="Username" id="username" name="username" required>
                 <input type="password" placeholder="Password" id="password" name="password" required>
                 <input type="checkbox" id="ceklis" onclick="showFunction()" required>
                 <label for="ceklis" style="color: black;">Tampilkan Sandi</label>
